# design-validation

./: .dockerignore  Dockerfile  README.md  convergence_sweep.py  install.sh  mesh_refinement_selection.md  pyproject.toml  run_validation.py  sweep_to_oom.sh  sweep_to_oom_solid.sh
configs/: fem_base.yaml  validate_diffusion_f2.yaml  validate_diffusion_f2_cloak.yaml  validate_diffusion_f2_uniform.yaml  validate_inverse_f2.yaml
data/: optimized_params.npz
data/cell_designs_diffusion/cell_014/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_028/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_041/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_042/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_043/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_055/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_056/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_057/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_068/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_069/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_070/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_071/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_072/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_082/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_083/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_084/: canvas.npy  weights.npz
data/cell_designs_diffusion/cell_085/: canvas.npy  weights.npz
output/: validation_result.csv
(+253 files in other folders)
